workspaces/liferay-partner-workspace/client-extensions/liferay-partner-custom-element/src/routes/dashboard/MDFRequestChart/index.css
.bb-grid-lines {
	display: none;
}

.dashboard-mdf-chart {
	min-height: 544px;
}

@media (min-width: 768px) {
	.dashboard-mdf-chart {
		height: 544px;
		min-height: 544px;
	}
}

.label-chart {
	font-weight: 500;
}

.label-chart.pending {
	background-color: #ffd764;
	border-color: #ffd764;
	color: #2e414e;
}

.label-chart.approved {
	background-color: #37d27e;
	border-color: #37d27e;
	color: #fff;
}

